# weather-edge-mcp

./: .dockerignore  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml
src/weather_edge_mcp/: __init__.py  __main__.py  cli.py  core.py  mcp_server.py  server.py  web_app.py
tests/: test_package.py
