[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather-edge-mcp"
version = "0.1.0"
description = "MCP server providing calibrated weather probability signals for Kalshi prediction markets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Weather Edge", email = "weatheredge@proton.me"},
]
keywords = ["mcp", "weather", "kalshi", "prediction-markets", "trading", "forecast", "ensemble"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/weather-edge/weather-edge-mcp"
Documentation = "https://github.com/weather-edge/weather-edge-mcp#readme"
Repository = "https://github.com/weather-edge/weather-edge-mcp"
Issues = "https://github.com/weather-edge/weather-edge-mcp/issues"

[project.scripts]
weather-edge-mcp = "weather_edge_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_edge_mcp"]
