[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather-edge-mcp"
version = "0.1.0"
description = "MCP server for calibrated weather prediction market signals (Kalshi). First-of-its-kind AI agent tool for weather trading intelligence."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "RJW34"}]
keywords = ["mcp", "weather", "kalshi", "prediction-market", "trading", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "pandas-ta>=0.3.14b",
]

[project.urls]
Homepage = "https://github.com/RJW34/weather-edge-mcp"
Issues = "https://github.com/RJW34/weather-edge-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_edge_mcp"]
