[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "weather-edge-mcp"
version = "0.2.0"
description = "MCP server for calibrated Kalshi weather-market signals."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "RJW34" }
]
keywords = ["mcp", "weather", "kalshi", "prediction-market", "trading", "ai-agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.24.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/RJW34/weather-edge-mcp"
Issues = "https://github.com/RJW34/weather-edge-mcp/issues"

[project.scripts]
weather-edge-mcp = "weather_edge_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_edge_mcp"]

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/LICENSE",
  "/glama.json",
  "/src",
  "/tests",
]
